handles input in other thread